src/test/deca/context/invalid/created/declVar/BOOLEAN_no_identifier.deca
// Description:
//  Assign un Boolean sans identier
// 
// Resultats:
//    Ligne 8 : identifier not defined

{
    boolean;
}